--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "debug": "^4.3.4",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase-admin": "^12.1.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^5.11.13",
-    "morgan": "~1.9.1"
+    "mongoose": "^8.3.2",
+    "morgan": "^1.10.0"
   }
 }
