finalized start page, ready for integration, follow comments. run "npm i"

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@mui/x-date-pickers": "^7.6.1",
     "framer-motion": "^11.1.9",
     "next": "13.5.4",
     "react": "^18",
