--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "firebase": "^10.11.0"
+    "@mui/x-date-pickers": "^7.6.1",
+    "firebase": "^10.11.0",
+    "react-calendar": "^5.0.0"
   }
 }
